@@ -5,31 +5,34 @@ import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 import jp.posl.jprophet.operation.*;
+import jp.posl.jprophet.patch.PatchCandidate;
+import jp.posl.jprophet.patch.PatchCandidateWithAbstHole;
+import jp.posl.jprophet.project.FileLocator;
+import jp.posl.jprophet.project.Project;
 
 
-public class RepairCandidateGenerator{
+public class PatchCandidateGenerator{
     /**
      * バグのあるソースコード群から修正パッチ候補を生成する 
      * 
      * @param project 修正パッチ候補を生成する対象のプロジェクト 
      * @return 条件式が抽象化された修正パッチ候補のリスト
      */
-    public List<RepairCandidate> exec(Project project){
-        List<String> filePaths = project.getSourceFilePaths();                
-        List<RepairCandidate> candidates = new ArrayList<RepairCandidate>();
-        for(String filePath : filePaths){
+    public List<PatchCandidate> exec(Project project){
+        List<FileLocator> fileLocators = project.getSrcFileLocators();                
+        List<PatchCandidate> candidates = new ArrayList<PatchCandidate>();
+        for(FileLocator fileLocator : fileLocators){
             try {
-                List<String> lines = Files.readAllLines(Paths.get(filePath), StandardCharsets.UTF_8);
+                List<String> lines = Files.readAllLines(Paths.get(fileLocator.getPath()), StandardCharsets.UTF_8);
                 String souceCode = String.join("\n", lines);
                 List<RepairUnit> repairUnits =  new AstGenerator().getAllRepairUnit(souceCode);
                 for(RepairUnit repairUnit : repairUnits){
                     List<RepairUnit> appliedUnits = this.applyTemplate(repairUnit);
                     for(RepairUnit appliedUnit : appliedUnits){
-                        candidates.add(new AbstractRepairCandidate(appliedUnit.getCompilationUnit(), filePath));
+                        candidates.add(new PatchCandidateWithAbstHole(appliedUnit, fileLocator.getPath(), fileLocator.getFqn()));
                     }
                 }
             } catch (IOException e) {
@@ -48,14 +51,14 @@ public class RepairCandidateGenerator{
      */
     private List<RepairUnit> applyTemplate(RepairUnit repairUnit) {
 
-        List<AstOperation> astOperations = new ArrayList<AstOperation>(Arrays.asList(
+        List<AstOperation> astOperations = List.of(
             new CondRefinementOperation(repairUnit),
             new CondIntroductionOperation(repairUnit), 
             new CtrlFlowIntroductionOperation(repairUnit), 
             new InsertInitOperation(repairUnit), 
             new VariableReplacementOperation(repairUnit),
             new CopyReplaceOperation(repairUnit)
-        ));
+        );
 
         List<RepairUnit> appliedUnits = new ArrayList<RepairUnit>();
         for (AstOperation astOperation : astOperations){
